--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <audio id="player" autoplay loop>
+        <source src="Malcolm Todd - Chest Pain.mp3" type="audio/mpeg">
+    </audio>
     <div class="container">
         <h1>Will you be my Valentine?</h1>
         <div class="buttons">
