--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <audio id="player" autoplay loop>
-        <source src="Malcolm Todd - Chest Pain.mp3" type="audio/mpeg">
+        <source src="https://github.com/pearlschild/for-bethany/blob/main/Malcolm%20Todd%20-%20Chest%20Pain.mp3">
     </audio>
     <div class="container">
         <h1>Will you be my Valentine?</h1>
